# NeuroAlign

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_import.py
data/: README.md
models/: README.md
notebooks/: 01_test_data_loading.ipynb  02_explore_feature_store.ipynb
src/neuroalign/: __init__.py
src/neuroalign/data/loaders/: __init__.py  anatomical.py  diffusion.py  questionnaire.py
src/neuroalign/data/preprocessing/: __init__.py  cli.py  config.py  feature_store.py  pipeline.py
