[project]
name = "neuroalign"
version = "0.1.0"
description = "NeuroAlign: Align brains through regional age patterns - Find your brain twins"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    # Core scientific stack
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    # Machine learning
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    # Neuroimaging
    "nibabel>=5.0.0",
    "nilearn>=0.10.0",
    # Retrieval/embeddings
    "faiss-cpu>=1.7.4",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    # Progress bars
    "tqdm>=4.65.0",
    # Configuration
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "parcellate>=0.1.0",
    # File formats
    "pyarrow>=14.0.0",
    "statsmodels>=0.14.6",
    "gam>=1.3.0",
    "pygam>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
]

parcellation = [
    # Your custom parcellation package - update URL
    # "parcellate @ git+https://github.com/your-username/parcellate.git",
]

app = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "anthropic>=0.7.0",
]

all = [
    "neuroalign[dev,parcellation,app]",
]

[project.scripts]
neuroalign-prepare = "neuroalign.data.preprocessing.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/neuroalign --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "B", "C90"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
